ensure play button always visible

--- a/webapp/public/css/styles.css
+++ b/webapp/public/css/styles.css
@@ -7,16 +7,16 @@ video {
   margin: 0;
   padding:0;
   height:auto;
+  max-height: 95vh;
   width: 100%;
   z-index: -100;
 }
 
 #controls {
   margin: 0 auto;
-  margin-top: 2em;
+  margin-top: 1em;
   width: 33%;
   text-align: center;
-  padding: 2em;
 }
 
 #controls button {
